--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -22,7 +22,7 @@
     </div>
   </div>
   <div class="nuevousuario">
-    <h6>Nuevo usuario? <a href="#">Regístrate</a></h6>
+    <h6>Nuevo usuario? <a [routerLink]="['/registro']">Regístrate</a></h6>
   </div>
   <div class="lineadivisora"></div>
   <div class="redesiniciosesion">
