--- a/src/app/inicio-alumnos/inicio-alumnos.page.html
+++ b/src/app/inicio-alumnos/inicio-alumnos.page.html
@@ -1,7 +1,4 @@
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">InicioAlumnos</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="BienvenidaTXT"> <h1>Bienvenido  Alumno</h1> <button> Cerrar Sesion</button></div>
+  <div class="lineaSeparadora"></div>
 </ion-content>
