--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,11 +1,39 @@
 ion-content.background {
-  --background: url(/assets/imagenes/background/bg.png) 0 0/100% 100% no-repeat;
+  --background: url('/assets/imagenes/background/bg.png') 0 0/100% 100% no-repeat;
   width: 100%; /* Asegura que el contenido ocupe el 100% del ancho */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh; /* Asegura que el contenido ocupe el 100% de la altura */
+  background: url('/assets/imagenes/background/bg.png') 0 0/100% 100% no-repeat;
+  transition: background 0.4s ease-in-out;
+}
+
+ion-content.background.oscuro {
+  --background: url('/assets/imagenes/background/bgOscuro.png') 0 0/100% 100% no-repeat;
+  background: url('/assets/imagenes/background/bgOscuro.png') 0 0/100% 100% no-repeat;
+} 
+
+ion-content.background.oscuro .BienvenidaTXT {
+  color: #ffffff;
+}
+
+ion-content.background.oscuro .FormularioLogin input {
+  background-color: #333333;
+  color: #ffffff;
+}
+
+ion-content.background.oscuro .RecuerdameOlvidaste {
+  color: #ffffff;
+}
+
+ion-content.background.oscuro .RecuerdameOlvidaste a {
+  color: #ffffff;
+}
+
+ion-content.background.oscuro .nuevousuario h6 {
+  color: #ffffff;
 }
 
 .LoginLogo {
@@ -23,7 +51,6 @@ ion-content.background {
   font-weight: bold;
   color: #000000;
   text-align: center;
-  margin-top: 20px;
   width: 100%;
   height: 15%;
 }
@@ -203,3 +230,112 @@ b {
     color: white;
   }
 }
+
+.switch {
+  font-size: 17px;
+  position: relative;
+  display: inline-block;
+  width: 64px;
+  height: 34px;
+  margin-top: 30px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #73C0FC;
+  transition: .4s;
+  border-radius: 30px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 30px;
+  width: 30px;
+  border-radius: 20px;
+  left: 2px;
+  bottom: 2px;
+  z-index: 2;
+  background-color: #e8e8e8;
+  transition: .4s;
+}
+
+.sun svg {
+  position: absolute;
+  top: 6px;
+  left: 36px;
+  z-index: 1;
+  width: 24px;
+  height: 24px;
+}
+
+.moon svg {
+  fill: #73C0FC;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  z-index: 1;
+  width: 24px;
+  height: 24px;
+}
+
+/* .switch:hover */.sun svg {
+  animation: rotate 15s linear infinite;
+}
+
+@keyframes rotate {
+ 
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* .switch:hover */.moon svg {
+  animation: tilt 5s linear infinite;
+}
+
+@keyframes tilt {
+ 
+  0% {
+    transform: rotate(0deg);
+  }
+
+  25% {
+    transform: rotate(-10deg);
+  }
+
+  75% {
+    transform: rotate(10deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+.input:checked + .slider {
+  background-color: #183153;
+}
+
+.input:focus + .slider {
+  box-shadow: 0 0 1px #183153;
+}
+
+.input:checked + .slider:before {
+  transform: translateX(30px);
+} 
