--- a/src/app/inicio-alumnos/inicio-alumnos.page.html
+++ b/src/app/inicio-alumnos/inicio-alumnos.page.html
@@ -1,4 +1,10 @@
-<ion-content [fullscreen]="true">
-  <div class="BienvenidaTXT"> <h1>Bienvenido  Alumno</h1> <button> Cerrar Sesion</button></div>
-  <div class="lineaSeparadora"></div>
+<ion-content padding class="home" [fullscreen]="true">
+  <div class="divhome"><h1 class="tituloHome">RegistrApp</h1></div>
+  <hr><hr>
+  <div class="carrusel"></div>
+
+  <div class="botonesHome">
+    <ion-button class="boton1" color="medium">Marcar Asistencia</ion-button>
+    <ion-button class="boton2" color="medium">Justificar Inasistencia</ion-button>
+  </div>
 </ion-content>
