--- a/src/app/inicio-alumnos/inicio-alumnos.page.scss
+++ b/src/app/inicio-alumnos/inicio-alumnos.page.scss
@@ -1,18 +1,66 @@
-.BienvenidaTXT{
+ion-content.home{
+    --background: url('/assets/imagenes/background/bgHome.png') 0 0/100% 100% no-repeat;
+}
+
+.divhome{
+    width: 100%;
+    height: 10vh;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 10px;
-}	
-.BienvenidaTXT h1{
-    font-size: 30px;
+    justify-content: center;
+    align-items: center;
+}
+.tituloHome{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    font-weight: bolder;
+    color: white;
+    text-align: center;
+    width: 100%;
+    height: 15%;
+    
+}
+
+
+.carrusel{
+    background-image: url('/assets/imagenes/background/testCarrusel.png');
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 234px;
+}
+
+.botonesHome {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr); /* Crea dos filas de igual altura */
+    justify-content: space-around; /* Distribuye el espacio horizontalmente */
+    align-content: space-around; /* Distribuye el espacio verticalmente */ /* Espacio entre los botones */
+    width: 100%;
+    height: 45%; /* Ajusta la altura según sea necesario */
+    justify-items: center; /* Centra los botones horizontalmente en su celda */
+    align-items: center; /* Centra los botones verticalmente en su celda */
+  }
+  
+  .boton1 {
+    color: white;
+    border: none;
+    border-radius: 20px;
+    width: 400px;
+    height: 150px;
+    font-size: 20px;
     font-weight: bold;
-    margin-top: 10px;
-    margin-bottom: 10px;  
-    color: grey ;  
-}
-.lineaSeparadora{
-    border-bottom: 1px solid #000;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
+    text-align: center;
+  }
+  
+  .boton2 {
+    color: white;
+    border: none;
+    border-radius: 20px;
+    width: 400px;
+    height: 150px;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+  }
