--- a/src/app/inicio-alumnos/inicio-alumnos.page.html
+++ b/src/app/inicio-alumnos/inicio-alumnos.page.html
@@ -1,10 +1,103 @@
-<ion-content padding class="home" [fullscreen]="true">
-  <div class="divhome"><h1 class="tituloHome">RegistrApp</h1></div>
-  <hr><hr>
-  <div class="carrusel"></div>
+<ion-content
+  padding
+  class="inicio-alumnos"
+  [fullscreen]="true"
+  [ngClass]="{ 'oscuro': isOscuro }"
+>
+  <div *ngIf="currentView === 'home'" class="homeContent">
+    <div class="topBar">
+      <h1>RegistrApp</h1>
+    </div>
 
-  <div class="botonesHome">
-    <ion-button class="boton1" color="medium">Marcar Asistencia</ion-button>
-    <ion-button class="boton2" color="medium">Justificar Inasistencia</ion-button>
+    <div class="carrusel">
+      <img src="/assets/imagenes/background/testCarrusel.png" alt="" />
+    </div>
+    <div class="botonesHome">
+      <ion-button class="boton1" color="medium">Marcar Asistencia</ion-button>
+      <ion-button class="boton2" color="medium"
+        >Justificar Inasistencia</ion-button
+      >
+    </div>
+  </div>
+
+  <div *ngIf="currentView === 'menu'" class="menuContent">
+    <div class="topBar">
+      <h1>RegistrApp</h1>
+    </div>
+    <div class="menuInicio">
+      <div class="item1">
+        <h3>Modo Claro/Oscuro</h3>
+        <label class="switch">
+          <span class="sun">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <g fill="#ffd43b">
+                <circle r="5" cy="12" cx="12"></circle>
+                <path
+                  d="m21 13h-1a1 1 0 0 1 0-2h1a1 1 0 0 1 0 2zm-17 0h-1a1 1 0 0 1 0-2h1a1 1 0 0 1 0 2zm13.66-5.66a1 1 0 0 1 -.66-.29 1 1 0 0 1 0-1.41l.71-.71a1 1 0 1 1 1.41 1.41l-.71.71a1 1 0 0 1 -.75.29zm-12.02 12.02a1 1 0 0 1 -.71-.29 1 1 0 0 1 0-1.41l.71-.66a1 1 0 0 1 1.41 1.41l-.71.71a1 1 0 0 1 -.7.24zm6.36-14.36a1 1 0 0 1 -1-1v-1a1 1 0 0 1 2 0v1a1 1 0 0 1 -1 1zm0 17a1 1 0 0 1 -1-1v-1a1 1 0 0 1 2 0v1a1 1 0 0 1 -1 1zm-5.66-14.66a1 1 0 0 1 -.7-.29l-.71-.71a1 1 0 0 1 1.41-1.41l.71.71a1 1 0 0 1 0 1.41 1 1 0 0 1 -.71.29zm12.02 12.02a1 1 0 0 1 -.7-.29l-.66-.71a1 1 0 0 1 1.36-1.36l.71.71a1 1 0 0 1 0 1.41 1 1 0 0 1 -.71.24z"
+                ></path>
+              </g>
+            </svg>
+          </span>
+          <span class="moon">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+              <path
+                d="m223.5 32c-123.5 0-223.5 100.3-223.5 224s100 224 223.5 224c60.6 0 115.5-24.2 155.8-63.4 5-4.9 6.3-12.5 3.1-18.7s-10.1-9.7-17-8.5c-9.8 1.7-19.8 2.6-30.1 2.6-96.9 0-175.5-78.8-175.5-176 0-65.8 36-123.1 89.3-153.3 6.1-3.5 9.2-10.5 7.7-17.3s-7.3-11.9-14.3-12.5c-6.3-.5-12.6-.8-19-.8z"
+              ></path>
+            </svg>
+          </span>
+          <input type="checkbox" class="input" (change)="claroOscuro()" />
+          <span class="slider"></span>
+        </label>
+      </div>
+      <button class="botonCerrarSesion" (click)="cerrarSesion()">Cerrar Sesión</button>
+    </div>
+  </div>
+  <div *ngIf="currentView === 'calendar'" class="calendarContent">
+    <div class="topBar">
+      <h1>
+        RegistrApp
+        <h6>Calendario Asistencia</h6>
+      </h1>
+    </div>
+    <div id="calendar">
+      <table>
+        <thead>
+          <tr>
+            <th>Dom</th>
+            <th>Lun</th>
+            <th>Mar</th>
+            <th>Mié</th>
+            <th>Jue</th>
+            <th>Vie</th>
+            <th>Sáb</th>
+          </tr>
+        </thead>
+        <tbody id="calendar-body"></tbody>
+      </table>
+    </div>
+  </div>
+
+  <div class="bottomBar">
+    <ion-button
+      [ngClass]="{'active': currentView === 'menu'}"
+      (click)="cambiarVista('menu')"
+      fill="clear"
+    >
+      <ion-icon name="menu-outline"></ion-icon>
+    </ion-button>
+    <ion-button
+      [ngClass]="{'active': currentView === 'home'}"
+      (click)="cambiarVista('home')"
+      fill="clear"
+    >
+      <ion-icon name="person-outline"></ion-icon>
+    </ion-button>
+    <ion-button
+      [ngClass]="{'active': currentView === 'calendar'}"
+      (click)="cambiarVista('calendar')"
+      fill="clear"
+    >
+      <ion-icon name="calendar-outline"></ion-icon>
+    </ion-button>
   </div>
 </ion-content>
