--- a/src/app/inicio-alumnos/inicio-alumnos.page.html
+++ b/src/app/inicio-alumnos/inicio-alumnos.page.html
@@ -45,7 +45,7 @@
               ></path>
             </svg>
           </span>
-          <input type="checkbox" class="input" (change)="claroOscuro()" />
+          <input type="checkbox" class="input" [checked]="isOscuro" (change)="claroOscuro()" />
           <span class="slider"></span>
         </label>
       </div>
