--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -1,6 +1,6 @@
 <ion-content padding class="background" [ngClass]="{ 'oscuro': isOscuro }">
   <div class="LoginLogo">
-    <img src="assets/imagenes/iconos/Registrappicon.png" class="Logo" alt="Logo" />
+    <img src="assets/imagenes/iconos/Registrappicon.png" id="logo" class="Logo" alt="Logo" />
   </div>
   <label class="switch">
     <span class="sun">
