--- a/src/app/registro/registro.page.scss
+++ b/src/app/registro/registro.page.scss
@@ -248,6 +248,7 @@ ion-content.background.oscuro .alumnoprofesor {
     width: 64px;
     height: 34px;
     margin-top: 30px;
+    margin-left: 15px;
   }
   
   .switch input {
