--- a/src/app/inicio-alumnos/inicio-alumnos.page.html
+++ b/src/app/inicio-alumnos/inicio-alumnos.page.html
@@ -10,13 +10,11 @@
     </div>
 
     <div class="carrusel">
-      <img src="/assets/imagenes/background/testCarrusel.png" alt="" />
+      <img src="/assets/imagenes/carrusel/carrusel1.png" alt="" />
     </div>
     <div class="botonesHome">
-      <ion-button class="boton1" color="medium">Marcar Asistencia</ion-button>
-      <ion-button class="boton2" color="medium"
-        >Justificar Inasistencia</ion-button
-      >
+      <a><ion-icon name="camera-outline" ></ion-icon>Marcar Asistencia</a>
+      <a><ion-icon name="newspaper-outline"></ion-icon>Justificar Inasistencia</a>
     </div>
   </div>
 
