--- a/src/app/inicio-profesores/inicio-profesores.page.html
+++ b/src/app/inicio-profesores/inicio-profesores.page.html
@@ -10,12 +10,12 @@
         </div>
 
         <div class="carrusel">
-            <img src="/assets/imagenes/background/testCarrusel.png" alt="" />
+            <img src="/assets/imagenes/carrusel/carrusel1.png" alt="" />
         </div>
         <div class="botonesHome">
-            <ion-button class="boton1" color="medium">Tomar Asistencia</ion-button>
-            <ion-button class="boton2" color="medium">Ver Cursos</ion-button>
-        </div>
+      <a><ion-icon name="camera-outline" ></ion-icon>Tomar Asistencia</a>
+      <a><ion-icon name="clipboard-outline"></ion-icon>Ver Cursos</a>
+    </div>
     </div>
 
     <div *ngIf="currentView === 'menu'" class="menuContent">
